Fix header image coverage on mobile

--- a/style.css
+++ b/style.css
@@ -343,10 +343,6 @@ footer {
       margin: 10px 0 60px 0;
     }
 
-    .banner-dimmer {
-      height: 80%;
-    }
-
     #site-logo a {
       margin: 1em auto;
     }
@@ -404,12 +400,12 @@ footer {
         margin: 40px 0 60px 0;
     }
 
-    .site-header.home-page .site-branding {
-        margin: 120px 0 180px 0;
+    .site-header {
+        background-size: cover;
     }
 
-    .banner-dimmer {
-      height: 80%;
+    .site-header.home-page .site-branding {
+        margin: 120px 0 180px 0;
     }
 
     #site-logo a {
@@ -772,7 +768,7 @@ article.hentry,
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: 50% 0px;
-    background-size: cover;
+    /*background-size: cover;*/
 }
 
 .site-branding {
@@ -889,7 +885,7 @@ article.hentry,
 }
 
 .primary-feature .container {
-    padding-top: 20px;
+    padding-top: 25px;
     padding-bottom: 15px;
     /*margin-top: -60px;*/
     -webkit-box-shadow: 0px 5px 10px 0px rgba(137,137,137,0.6);
